# Three-Patch-Reference-Card

./: .gitignore  README.md  pyproject.toml
configs/datasets/: real_world_dataset_2.yaml  synthetic.yaml
configs/experiments/: hybrid_residual_synthetic.yaml
configs/models/: direct_21d_mlp.yaml  hybrid_residual.yaml  transform_mlp.yaml
data/: real_world_dataset_2.pkl
manifests/: real_world_dataset_2.csv
scripts/: build_real_manifest.py  build_synthetic_manifest.py  collect_metrics.py  evaluate.py  make_splits.py  nn_architecture.tex  pretrain_synthetic.py  run_baseline.py  train_model.py
splits/real_world_dataset_2/light_holdout/: seed_42.csv
splits/real_world_dataset_2/object_and_light_holdout/: seed_42.csv
splits/real_world_dataset_2/object_holdout/: seed_42.csv
splits/real_world_dataset_2/random_pair/: seed_42.csv
src/colorrevision/: __init__.py  config.py
src/colorrevision/baselines/: __init__.py  affine_ls.py  channel_regression.py  copy_source.py  diagonal.py  full_matrix_ls.py  knn.py  m3cb.py
src/colorrevision/data/: color_spaces.py  manifest.py  row_access.py  splits.py
src/colorrevision/features/: patch_features.py  transforms.py
src/colorrevision/metrics/: delta_e.py  summary.py
src/colorrevision/models/: direct_18d.py  direct_21d.py  hybrid_residual.py  transform_mlp.py
src/colorrevision/stats/: bootstrap.py  paired_tests.py
tests/: test_full_matrix_ls.py  test_image_illuminants.py  test_input_policies.py  test_metrics.py  test_row_access.py  test_splits.py  test_train_model_transform_matrix.py  test_transforms.py
(+180 files in other folders)
